# Signal-to-Ticket-Agent

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md  SKILLS.md  app.py  pyproject.toml  requirements.txt  seed.py
.github/workflows/: test.yml
data/: demo_events.json  mandate.json  seed_analogues.json
data/chroma_db/: chroma.sqlite3
docs/: ARCHITECTURE.md
signal_to_ticket/: agent.py  classifier.py  compliance.py  config.py  edgar.py  retrieval.py  sizer.py  ticket.py  vector_store.py
tests/: test_classifier.py  test_edgar.py  test_sizer.py  test_vector_store.py
